--- a/Test/VsVimTest/VsVimTest.csproj
+++ b/Test/VsVimTest/VsVimTest.csproj
@@ -34,6 +34,9 @@
     <ProjectReference Include="..\..\Src\VimWpf\VimWpf.csproj" />
     <ProjectReference Include="..\..\Src\VsVimShared\VsVimShared.csproj" />
     <ProjectReference Include="..\..\Src\VsVim\VsVim.csproj" />
+    <ProjectReference Include="..\..\Src\VsSpecific\Vs2015\Vs2015.csproj">
+      <Aliases>VsVim2015</Aliases>
+    </ProjectReference>
     <ProjectReference Include="..\..\Src\VsSpecific\Vs2017\Vs2017.csproj">
       <Aliases>VsVim2017</Aliases>
     </ProjectReference>
